# mnemos-bridge-aider

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/mnemos_bridge_aider/: __init__.py  adapter.py  cli.py  path_b_shim.py
tests/: test_adapter_offline.py  test_cli_offline.py
tests/integration/: test_aider_workflow.py
