[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemos-bridge-aider"
version = "0.1.0"
description = "Aider adapter for MNEMOS bridge integrations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "MNEMOS OS" }
]
dependencies = [
  "mnemos-bridge-core>=0.1.0",
  "aider-chat>=0.50",
  "httpx>=0.27",
  "pydantic>=2.8",
  "click>=8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[project.scripts]
mnemos-aider = "mnemos_bridge_aider.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos_bridge_aider"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
